extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

	



func _on_texture_button_pressed() -> void:
	$"meow-5".play()
	pass # Replace with function body.


func _on_texture_button_2_pressed() -> void:
	$"meow-4".play()
	pass # Replace with function body.


func _on_texture_button_3_pressed() -> void:
	$"meow-3".play()
	pass # Replace with function body.


func _on_texture_button_4_pressed() -> void:
	$"meow-2".play()
	pass # Replace with function body.


func _on_texture_button_5_pressed() -> void:
	$"meow-1".play()
	pass # Replace with function body.


func _on_texture_button_6_pressed() -> void:
	$meow0.play()
	pass # Replace with function body.


func _on_texture_button_7_pressed() -> void:
	$meow1.play()
	pass # Replace with function body.


func _on_texture_button_8_pressed() -> void:
	$meow2.play()
	pass # Replace with function body.


func _on_texture_button_9_pressed() -> void:
	$meow3.play()
	pass # Replace with function body.


func _on_texture_button_10_pressed() -> void:
	$meow4.play()
	pass # Replace with function body.


func _on_texture_button_11_pressed() -> void:
	$meow5.play()
	pass # Replace with function body.
